--- a/use-cases.html
+++ b/use-cases.html
@@ -3,7 +3,7 @@ title: AnyFetch | Use cases
 layout: main
 ---
 
-<div class="container content">
+<div class="container content" data-spy="scroll" data-target="#sidebar">
 
 	<div class="row row-offcanvas row-offcanvas-right">
 
@@ -18,7 +18,7 @@ layout: main
 						<div class="row">
 							<div class="col-lg-6">
 								<span class="invisible-anchor" id="project1">&nbsp;</span>
-								<h2>The ultimate business assistant </h2>
+								<h2 id="use-case1">The ultimate business assistant </h2>
 								<p>We are on a mission to revolutionize CRM and the way business users interact with their data. AnyFetch provides contextual feeds providing the information you need, directly within Salesforce and Salesforce1. We created AnyFetch for Salesforce because we, ourselves, wanted to use it. Check out the dedicated website here.</p>
 								<p><a class="btn btn-default" href="http://salesfetch.anyfetch.com" role="button">Salesforce &raquo;</a></p>
 							</div>
@@ -42,7 +42,7 @@ layout: main
 							</div>
 							<div class="col-lg-6 col-lg-offset-1">
 								<span class="invisible-anchor" id="project2">&nbsp;</span>
-								<h2>Revolutionizing enterprise search</h2>
+								<h2 id="use-case2">Revolutionizing enterprise search</h2>
 								<p>AnyFetch is trusted by IT experts in fiels such as Insurance, Banking, consulting and software development. See how IT services are leveraging AnyFetch to deliver value to their core businesses.</p>
 								<p><a class="btn btn-default" href="./how-it-works.html" role="button">View details &raquo;</a></p>
 							</div>
@@ -59,7 +59,7 @@ layout: main
 						<div class="row">
 							<div class="col-lg-6">
 								<span class="invisible-anchor" id="project3">&nbsp;</span>
-								<h2>Developers love it</h2>
+								<h2 id="use-case3">Developers love it</h2>
 								<p>Check out what developers do with AnyFetch, and how they deliver value to their users by providing great user experience. It is only a matter of minutes to get to production, and you can fully test it beforehand.</p>
 								<p><a class="btn btn-default" href="developers.html" role="button">See why &raquo;</a></p>
 							</div>
@@ -77,7 +77,7 @@ layout: main
 		</div><!--/span-->
 
 		<div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
-			<div class="list-group">
+			<div class="nav list-group">
 				<a href="#project1" class="list-group-item" data-spy="scroll" data-target=".navbar-example">Business assistant</a>
 				<a href="#project2" class="list-group-item">Entreprise search</a>
 				<a href="#project3" class="list-group-item">Developers</a>
