--- a/use-cases.html
+++ b/use-cases.html
@@ -25,7 +25,7 @@ layout: main
 								<h2>The ultimate business assistant</h2>
 								<p class="lead">We are on a mission to revolutionize CRM and the way business users interact with their data. AnyFetch provides contextual feeds providing the information you need, directly within Salesforce and Salesforce1. We created AnyFetch for Salesforce because we, ourselves, wanted to use it. Check out the dedicated website here.</p>
 							</div>
-							<div class="col-lg-2 col-sm-pull-6  col-sm-2 use-case thumbnail">
+							<div class="col-lg-3 col-sm-pull-6  col-sm-3 use-case-thumbnail thumbnail">
 								<img src="images/iphone_salesfetch.jpg">
 							</div>
 						</div>
@@ -45,7 +45,7 @@ layout: main
 								<h2>Revolutionizing enterprise search</h2>
 								<p class="lead">AnyFetch is trusted by IT experts in fiels such as Insurance, Banking, consulting and software development. See how IT services are leveraging AnyFetch to deliver value to their core businesses.</p>
 							</div>
-							<div class="col-lg-2 col-sm-2 use-case thumbnail">
+							<div class="col-lg-3 col-sm-3 use-case-thumbnail thumbnail">
 								<img src="images/screen_anyfetch.jpg">
 							</div>
 						</div>
@@ -65,7 +65,7 @@ layout: main
 								<h2>Developers love it</h2>
 								<p class="lead">Check out what developers do with AnyFetch, and how they deliver value to their users by providing great user experience. It is only a matter of minutes to get to production, and you can fully test it beforehand.</p>
 							</div>
-							<div class="col-lg-2 col-sm-pull-6  col-sm-2 use-case thumbnail">
+							<div class="col-lg-3 col-sm-pull-6  col-sm-3 use-case-thumbnail thumbnail">
 								<img src="images/screen_code.jpg">
 							</div>
 						</div>
