anchors in use cases

--- a/use-cases.html
+++ b/use-cases.html
@@ -20,6 +20,7 @@ layout: main
 
 						<div class="row">
 							<div class="col-lg-6 col-sm-push-3  col-sm-9">
+								<span class="invisible-anchor" id="project1">&nbsp;</span>
 								<hr class="section-heading-spacer">
 								<div class="clearfix"></div>
 								<h2>The ultimate business assistant</h2>
@@ -40,6 +41,7 @@ layout: main
 
 						<div class="row">
 							<div class="col-lg-6 col-sm-9">
+								<span class="invisible-anchor" id="project2">&nbsp;</span>
 								<hr class="section-heading-spacer">
 								<div class="clearfix"></div>
 								<h2>Revolutionizing enterprise search</h2>
@@ -60,6 +62,7 @@ layout: main
 
 						<div class="row">
 							<div class="col-lg-6 col-lg-offset- col-sm-push-3  col-sm-9">
+								<span class="invisible-anchor" id="project3">&nbsp;</span>
 								<hr class="section-heading-spacer">
 								<div class="clearfix"></div>
 								<h2>Developers love it</h2>
