--- a/about-us.html
+++ b/about-us.html
@@ -48,9 +48,10 @@ layout: main
 			</div>
 		</div>
 
-		<div class="row" id="contact">
+		<div class="row">
 
 			<div class="col-lg-12">
+				<span class="invisible-anchor" id="contact">&nbsp;</span>
 
 				<h2>Contact</h2>
 				<hr>
