--- a/get-started.html
+++ b/get-started.html
@@ -15,13 +15,13 @@ layout: main
 			<div class="col-lg-6">
 			<br />
 			<br />
-				<p>We are working on our private beta and you can't automaticaly register. But feel free to contact us at <a href="mailto:contact@anyfetch.com">contact@anyfetch.com</a> to access the beta.<br />
+				<p>We are working on our private beta and you can't register right now. But feel free to contact us at <a href="mailto:contact@anyfetch.com">contact@anyfetch.com</a> to access the beta.<br />
 				You can also give us your email to receive informations.</p>
 
 					<div class="input-group">
 						<input type="text" class="form-control">
 						<span class="input-group-btn">
-							<button class="btn btn-default" type="button">Send</button>
+							<button class="btn btn-default btn-form" type="button">Send</button>
 						</span>
 					</div><!-- /input-group -->
 
