add get-started remove press

--- a/get-started.html
+++ b/get-started.html
@@ -6,27 +6,28 @@ layout: main
 
 <div class="container content">
 		<div class="row">
-			<div class="col-lg-12">
+			<div class="col-lg-12 get-started-header">
 				<h2>Get started with AnyFetch</h2>
 				<hr>
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-lg-6">
+			<div class="col-lg-6 margin-bottom">
 			<br />
 			<br />
 				<p>We are working on our private beta and you can't register right now. But feel free to contact us at <a href="mailto:contact@anyfetch.com">contact@anyfetch.com</a> to access the beta.<br />
 				You can also give us your email to receive informations.</p>
-
+				<form action="#">
 					<div class="input-group">
 						<input type="text" class="form-control">
 						<span class="input-group-btn">
-							<button class="btn btn-default btn-form" type="button">Send</button>
+							<input class="btn btn-default btn-form" type="submit" value="Submit"/>
 						</span>
 					</div><!-- /input-group -->
+				</form>
 
 			</div>
-			<div class="col-lg-5 col-lg-offset-1">
+			<div class="col-lg-5 col-lg-offset-1 margin-bottom">
 				<div class="jumbotron">
 					<h1 class="title">Already registered ?</h1>
 					<p><a href="http://app.anyfetch.com" class="btn btn-default btn-lg"><span class="network-name">Access app</span></a></p>
