--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ layout: main
 					<h3>A complete solution built for developers</h3>
 					<hr class="intro-divider">
 					<ul class="list-inline intro-social-buttons">
-						<!-- <li><a href="http://developers.anyfetch.com/" class="btn btn-default btn-lg"><span class="network-name">Get started</span></a>
-						</li> -->
+						<li><a href="get-started.html" class="btn btn-default btn-lg"><span class="network-name">Get started</span></a>
+						</li>
 					</ul>
 				</div>
 			</div>
