about us github + linkedin

--- a/about-us.html
+++ b/about-us.html
@@ -15,6 +15,9 @@ layout: main
 							<div class="caption">
 								<h4>Mehdi Bouheddi</h4>
 								<p>CEO</p>
+								<p><a target="_blank" href="mailto:mehdi@anyfetch.com">mehdi@anyfetch.com</a></p>
+									<a target="_blank" href="https://github.com/Boudedi" class="profile-link"><i class="fa fa-github fa-2x"></i></a>
+									<a target="_blank" href="https://www.linkedin.com/profile/view?id=69893214" class="profile-link"><i class="fa fa-linkedin-square fa-2x"></i></a>
 							</div>
 						</div>
 					</div>
@@ -24,6 +27,9 @@ layout: main
 							<div class="caption">
 								<h4>Matthieu Bacconnier</h4>
 								<p>CTO</p>
+								<p><a target="_blank" href="mailto:matthieu@anyfetch.com">matthieu@anyfetch.com</a></p>
+									<a target="_blank" href="https://github.com/Neamar" class="profile-link"><i class="fa fa-github fa-2x"></i></a>
+									<a target="_blank" href="https://www.linkedin.com/profile/view?id=246055775" class="profile-link"><i class="fa fa-linkedin-square fa-2x"></i></a>
 							</div>
 						</div>
 					</div>
@@ -33,6 +39,9 @@ layout: main
 							<div class="caption">
 								<h4>Hugo Duroux</h4>
 								<p>Backend</p>
+								<p><a target="_blank" href="mailto:hugodouroux@gmail.com">hugoduroux@gmail.com</a></p>
+									<a target="_blank" href="https://github.com/Amoki" class="profile-link"><i class="fa fa-github fa-2x"></i></a>
+									<a target="_blank" href="https://www.linkedin.com/profile/view?id=234443594" class="profile-link"><i class="fa fa-linkedin-square fa-2x"></i></a>
 							</div>
 						</div>
 					</div>
@@ -42,6 +51,9 @@ layout: main
 							<div class="caption">
 								<h4>Tanguy Helesbeux</h4>
 								<p>Product</p>
+								<p><a target="_blank" href="mailto:tanguy.helesbeux@gmail.com">tanguy.helesbeux@gmail.com</a></p>
+									<a target="_blank" href="https://github.com/Tgy31" class="profile-link"><i class="fa fa-github fa-2x"></i></a>
+									<a target="_blank" href="https://www.linkedin.com/profile/view?id=272642841" class="profile-link"><i class="fa fa-linkedin-square fa-2x"></i></a>
 							</div>
 						</div>
 					</div>
