--- a/how-it-works.html
+++ b/how-it-works.html
@@ -5,6 +5,12 @@ layout: main
 
 <div class="container content">
 
+
+	<div class="jumbotron">
+		<h1 class="title">Turn your data<br> into information</h1>
+		<p>Context is everywhere</p>
+	</div>
+
 	<div class="row">
 					<img class="header-img" src="images/howitworks.jpg" />
 	</div>
