--- a/use-cases.html
+++ b/use-cases.html
@@ -3,23 +3,20 @@ title: AnyFetch | Use cases
 layout: main
 ---
 
-<div class="container content" data-spy="scroll" data-target="#sidebar">
 
-	<div class="row row-offcanvas row-offcanvas-right">
+<div class="container content">
 
-		<div class="col-xs-12 col-sm-9">
-			<div class="jumbotron">
-				<h1 class="title">Turn your data<br/> into information</h1>
-				<p>Context is everywhere</p>
-			</div>
-			<div class="row">
+	<div class="jumbotron">
+		<h1 class="title">Turn your data<br> into information</h1>
+		<p>Context is everywhere</p>
+	</div>
 
 				<div class="content-section-c">
 
 					<div class="container">
 
 						<div class="row">
-							<div class="col-lg-6 col-sm-push-3  col-sm-9">
+							<div class="col-lg-6 col-sm-push-3  col-sm-9 col-lg-offset-1">
 								<span class="invisible-anchor" id="project1">&nbsp;</span>
 								<hr class="section-heading-spacer">
 								<div class="clearfix"></div>
@@ -40,7 +37,7 @@ layout: main
 					<div class="container">
 
 						<div class="row">
-							<div class="col-lg-6 col-sm-9">
+							<div class="col-lg-6 col-sm-9 col-lg-offset-1">
 								<span class="invisible-anchor" id="project2">&nbsp;</span>
 								<hr class="section-heading-spacer">
 								<div class="clearfix"></div>
@@ -61,7 +58,7 @@ layout: main
 					<div class="container">
 
 						<div class="row">
-							<div class="col-lg-6 col-lg-offset- col-sm-push-3  col-sm-9">
+							<div class="col-lg-6 col-lg-offset- col-sm-push-3  col-sm-9 col-lg-offset-1">
 								<span class="invisible-anchor" id="project3">&nbsp;</span>
 								<hr class="section-heading-spacer">
 								<div class="clearfix"></div>
@@ -77,16 +74,4 @@ layout: main
 					<!-- /.container -->
 				</div>
 
-
-			</div><!--/span-->
-		</div><!--/span-->
-
-		<div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
-			<div class="nav list-group">
-				<a href="#project1" class="list-group-item" data-spy="scroll" data-target=".navbar-example">Business assistant</a>
-				<a href="#project2" class="list-group-item">Entreprise search</a>
-				<a href="#project3" class="list-group-item">Developers</a>
-			</div>
-		</div><!--/span-->
-	</div><!--/row-->
-</div><!--/.container-->
+</div>
