it --> entreprise + fixes everywhere

--- a/entreprise.html
+++ b/entreprise.html
@@ -26,7 +26,7 @@ layout: main
 					</ul>
 				</p>
 				<br />
-				<p class="text-centered"><a class="btn btn-default" href="how-it-works.html" role="button">See how it works »</a></p>
+				<p class="text-centered"><a class="btn btn-default" href="how-it-works.html" role="button">See how it works</a></p>
 			</div><!-- /.col-lg-5 -->
 		</div>
 
@@ -46,7 +46,7 @@ layout: main
 				<br />
 				<br />
 				<br />
-				<p class="text-centered"><a class="btn btn-default" href="http://app.anyfetch.com" role="button">Get started »</a></p>
+				<p class="text-centered"><a class="btn btn-default" href="http://app.anyfetch.com" role="button">Get started</a></p>
 			</div><!-- /.col-lg-5 -->
 		</div>
 
@@ -57,5 +57,7 @@ layout: main
 				<p class="text-centered">AnyFetch brings rapid prototyping, testing, and great user experience to the IT space so that in a couple of days, any developer can test, try and ship his product.</p>
 
 		</div>
+
+</div>
 
 </div>
