New landing image (first draft)

--- a/index.html
+++ b/index.html
@@ -60,16 +60,27 @@ layout: main
 				</div>
 			</div>
 		</div>
+
+		<div class="row">
+			<div class="col-md-9">
+				<img width="100%" src="../images/multi-browser.jpg" />
+			</div>
+			<div class="col-md-3 text-left">
+				<br/>
+				<br/>
+				<br/>
+				<h1 class="text-left">Context is everywhere.</h1>
+				<hr/>
+				<h3 style="color: #666">Start developing your app
+				on top of AnyFetch.</h3>
+				<br/>
+				<p class="text-center"><a href="http://developers.anyfetch.com/" class="btn btn-default btn-lg"><span class="network-name">Get started</span></a></p>
+			</div>
+		</div>
 	</div>
 	<div>
 	<!-- <h2>See how they use it<a href="use-cases.html" class="btn btn-default btn-lg inline-button"><i class="fa fa-github fa-fw"></i> <span class="network-name">Use cases</span></a></h2> -->
 	</div>
-
-
-
-
-
-	<img src="../images/browser.jpg" />
 </div>
 
 <div class="content-section-b">
