links in use-cases + nag fix

--- a/entreprise.html
+++ b/entreprise.html
@@ -54,7 +54,7 @@ layout: main
 
 	<div class="row">
 		<div class="col-lg-12">
-				<p class="text-centered">AnyFetch brings rapid prototyping, testing, and great user experience to the IT space so that in a couple of days, any developer can test, try and ship his product.</p>
+				<p class="text-centered">AnyFetch brings rapid prototyping, testing, and great user experience to the IT space so that in a couple of days, any developer can test, try and ship his product.<br /><br /></p>
 
 		</div>
 
