new punch lines

--- a/entreprise.html
+++ b/entreprise.html
@@ -6,8 +6,8 @@ layout: main
 <div class="container content">
 
 	<div class="jumbotron">
-		<h1 class="title">Turn your data<br> into information</h1>
-		<p>Context is everywhere</p>
+		<h1 class="title">Why you should<br />use AnyFetch</h1>
+		<p>Stop waiting, get started</p>
 	</div>
 
 	<div class="row row-text">
