--- a/how-it-works.html
+++ b/how-it-works.html
@@ -7,8 +7,8 @@ layout: main
 
 
 	<div class="jumbotron">
-		<h1 class="title">Turn your data<br> into information</h1>
-		<p>Context is everywhere</p>
+		<h1 class="title">It makes user experience<br />awesome</h1>
+		<p>With painless integration</p>
 	</div>
 
 	<div class="row">
