Prepare new shape

--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@ layout: main
 
 		<div class="row">
 			<div class="col-md-9">
-				<img width="100%" src="../images/multi-browser.jpg" />
+				<div class="window">
+					<img width="100%" src="../images/multi-browser-top.jpg" />
+					<img width="100%" src="../images/multi-browser-frame.jpg" />
+				</div>
 			</div>
 			<div class="col-md-3 text-left">
 				<br/>
