--- a/use-cases.html
+++ b/use-cases.html
@@ -16,7 +16,7 @@ layout: main
 					<div class="container">
 
 						<div class="row">
-							<div class="col-lg-6 col-sm-push-3  col-sm-9 col-lg-offset-1">
+							<div class="col-lg-6 col-lg-push-3 col-sm-push-4  col-sm-6 col-lg-offset-1 col-sm-offset-1">
 								<span class="invisible-anchor" id="project1">&nbsp;</span>
 								<hr class="section-heading-spacer">
 								<div class="clearfix"></div>
@@ -38,7 +38,7 @@ layout: main
 					<div class="container">
 
 						<div class="row">
-							<div class="col-lg-6 col-sm-9 col-lg-offset-1">
+							<div class="col-lg-6 col-sm-6 col-lg-offset-1 col-sm-offset-1">
 								<span class="invisible-anchor" id="project2">&nbsp;</span>
 								<hr class="section-heading-spacer">
 								<div class="clearfix"></div>
@@ -60,7 +60,7 @@ layout: main
 					<div class="container">
 
 						<div class="row">
-							<div class="col-lg-6 col-lg-offset- col-sm-push-3  col-sm-9 col-lg-offset-1">
+							<div class="col-lg-6 col-lg-push-3 col-sm-push-4  col-sm-6 col-lg-offset-1 col-sm-offset-1">
 								<span class="invisible-anchor" id="project3">&nbsp;</span>
 								<hr class="section-heading-spacer">
 								<div class="clearfix"></div>
