HIW : enable awesone user experience + landing : we have already built open source connectors...

--- a/how-it-works.html
+++ b/how-it-works.html
@@ -7,7 +7,7 @@ layout: main
 
 
 	<div class="jumbotron">
-		<h1 class="title">It makes user experience<br />awesome</h1>
+		<h1 class="title">Enable awesome user experience</h1>
 		<p>With painless integration</p>
 	</div>
 
