--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 				<img src="images/connections.svg">
 				<div class="caption">
 					<h2>Connect any data source</h2>
-					<p class="lead">Whether local or in the cloud, we provide open-source connectors to 20+ services. It only takes a few minutes to create your own!</p>
+					<p class="lead">Whether local or in the cloud, we have already built open-source connectors to 20+ services. It only takes a few minutes to create your own!</p>
 				</div>
 			</div>
 		</div>
