landing : Context matters + title.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="intro-message">
-					<h1>Search, properly done</h1>
+					<h1>Search, properly done.</h1>
 					<img class="source-icon" src="images/banner_icons.png">
 					<h3>A complete solution built for developers</h3>
 					<hr class="intro-divider">
@@ -126,7 +126,7 @@
 				<br/>
 				<br/>
 				<br/>
-				<h1 class="text-left">Context is everywhere.</h1>
+				<h1 class="text-left">Context matters.</h1>
 				<hr/>
 				<h3 style="color: #666">Start developing your app
 				on top of AnyFetch.</h3>
