Use cases : Enterprise search text

--- a/use-cases.html
+++ b/use-cases.html
@@ -43,7 +43,7 @@ layout: main
 								<hr class="section-heading-spacer">
 								<div class="clearfix"></div>
 								<h2>Revolutionizing enterprise search</h2>
-								<p class="lead">AnyFetch is trusted by IT experts in fields such as Insurance, Banking, consulting and software development. See how IT services are leveraging AnyFetch to deliver value to their core businesses.</p>
+								<p class="lead">AnyFetch is trusted by IT experts in industries such as Insurance, Financial services, Consulting and Software development. See how IT services are leveraging AnyFetch to deliver value to their core businesses.</p>
 								<p class="text-centered"><a class="btn btn-default" href="./how-it-works.html" role="button">View details »</a></p>
 							</div>
 							<div class="col-lg-3 col-sm-3 use-case-thumbnail thumbnail">
