--- a/use-cases.html
+++ b/use-cases.html
@@ -65,7 +65,7 @@ layout: main
 								<hr class="section-heading-spacer">
 								<div class="clearfix"></div>
 								<h2>Developers love it</h2>
-								<p class="lead">Check out what developers do with AnyFetch, and how they deliver value to their users by providing great user experience. It is only a matter of minutes to get to production, and you can fully test it beforehand.</p>
+								<p class="lead">Check out what developers are doing with AnyFetch, and how they are delivering value to their users with a great user experience. A working prototype can be built in minutes and quickly deployed to production.</p>
 								<p class="text-centered"><a class="btn btn-default" href="entreprise.html" role="button">See why »</a></p>
 							</div>
 							<div class="col-lg-3 col-sm-pull-6  col-sm-3 use-case-thumbnail thumbnail">
