--- a/use-cases.html
+++ b/use-cases.html
@@ -21,8 +21,8 @@ layout: main
 								<hr class="section-heading-spacer">
 								<div class="clearfix"></div>
 								<h2>The ultimate business assistant</h2>
-								<p class="lead">We are on a mission to revolutionize CRM and the way business users interact with their data. AnyFetch provides contextual feeds providing the information you need, directly within Salesforce and Salesforce1. We created AnyFetch for Salesforce because we, ourselves, wanted to use it. Check out the dedicated website here.</p>
-								<p class="text-centered"><a class="btn btn-default" href="http://salesfetch.anyfetch.com" role="button">Salesforce »</a></p>
+								<p class="lead">We are on a mission to revolutionize CRM and the way business users interact with their data. With AnyFetch, users get contextual information, from all their cloud services, directly within Salesforce.</p>
+								<p class="text-centered"><a class="btn btn-default" href="http://salesfetch.anyfetch.com" role="button">AnyFetch for Salesforce »</a></p>
 							</div>
 							<div class="col-lg-3 col-sm-pull-6  col-sm-3 use-case-thumbnail thumbnail">
 								<img src="images/iphone_salesfetch.jpg">
