--- a/use-cases.html
+++ b/use-cases.html
@@ -44,7 +44,7 @@ layout: main
 								<div class="clearfix"></div>
 								<h2>Revolutionizing enterprise search</h2>
 								<p class="lead">AnyFetch is trusted by IT experts in industries such as Insurance, Financial services, Consulting and Software development. See how IT services are leveraging AnyFetch to deliver value to their core businesses.</p>
-								<p class="text-centered"><a class="btn btn-default" href="./how-it-works.html" role="button">View details »</a></p>
+								<p class="text-centered"><a class="btn btn-default" href="./enterprise.html" role="button">View details »</a></p>
 							</div>
 							<div class="col-lg-3 col-sm-3 use-case-thumbnail thumbnail">
 								<img src="images/screen_anyfetch.jpg">
@@ -66,7 +66,7 @@ layout: main
 								<div class="clearfix"></div>
 								<h2>Developers love it</h2>
 								<p class="lead">Check out what developers are doing with AnyFetch, and how they are delivering value to their users with a great user experience. A working prototype can be built in minutes and quickly deployed to production.</p>
-								<p class="text-centered"><a class="btn btn-default" href="entreprise.html" role="button">See why »</a></p>
+								<p class="text-centered"><a class="btn btn-default" href="./how-it-works.html" role="button">See why »</a></p>
 							</div>
 							<div class="col-lg-3 col-sm-pull-6  col-sm-3 use-case-thumbnail thumbnail">
 								<img src="images/screen_code.jpg">
