Fiw how it works horizontal scroll

--- a/about-us.html
+++ b/about-us.html
@@ -50,7 +50,7 @@ layout: main
 						<div class="thumbnail-portrait">
 						<img class="portrait" src="images/tanguy-haut.jpg">
 							<div class="caption">
-								<h4>Tanguy Helesbeux</h4>
+								<h4>Tanguy Hélesbeux</h4>
 								<p>Product</p>
 								<p><a target="_blank" href="mailto:tanguy.helesbeux@gmail.com">tanguy.helesbeux@gmail.com</a></p>
 									<a target="_blank" href="https://github.com/Tgy31" class="profile-link"><i class="fa fa-github fa-2x"></i></a>
