New enterprise page

--- a/enterprise.html
+++ b/enterprise.html
@@ -6,43 +6,33 @@ layout: main
 <div class="container content">
 
 	<div class="jumbotron">
-		<h1 class="title">Why you should<br />use AnyFetch</h1>
-		<p>Stop waiting, get started</p>
+		<h1 class="title">AnyFetch for IT services</h1>
+		<p>Build, fast.</p>
 	</div>
 
 	<div class="row row-text">
 		<div class="col-lg-6">
-			<div class="col-lg-12 thumbnail-developers">
-				<img src="images/tools.svg" style="width: 140px; height: 140px;">
-			</div>
-
 			<div class="col-lg-12 content-column-developers">
-				<h2>Build</h2>
-				<p>Searching non-structured data requires non-trivial expertise.
-					<ul>
-						<li>Architectural choices need to be done really soon in the project; and once they're made they can't easily be changed due to the nature of data being stored</li>
-						<li>Relevance is key, and many iterations and fine-tuning are necessary to add real value despite the different sources</li>
-						<li>Maintaining your solution over time by connecting new data sources while improving relevance globally is a full-time job</li>
-					</ul>
-				</p>
+				<h2>Integrate in a few steps :</h2>
+					<ol>
+						<li>Identify the data sources</li>
+						<li>Use existing connectors or create one</li>
+						<li>Integrate anywhere using code snippets or our web and mobile apps (coming soon)</li>
+						<li>Customize the context to your need</li>
+					</ol>
 				<br />
 				<p class="text-centered"><a class="btn btn-default" href="how-it-works.html" role="button">See how it works</a></p>
 			</div><!-- /.col-lg-5 -->
 		</div>
 
 		<div class="col-lg-6">
-			<div class="col-lg-12 thumbnail-developers column-right">
-				<img src="images/buy.svg" style="width: 140px; height: 140px;">
-			</div>
-
 			<div class="col-lg-12 content-column-developers column-right">
-				<h2>Buy</h2>
-				<p>As IT is moving to the cloud, buying software and maintaining it becomes obsolete, but:</p>
+				<h2>Why AnyFetch ?</h2>
 				<ul>
-					<li>Legacy services are still here with applications used in the consumer world</li>
-					<li>Enterprise search solutions have not evolved to handle this shift</li>
+					<li>It is comprehensive, and accepts both cloud and local data</li>
+					<li>It is cloud based, and works with any device</li>
+					<li>It is easy to use : any developer can try it, for free</li>
 				</ul>
-				<br />
 				<br />
 				<br />
 				<br />
@@ -54,7 +44,7 @@ layout: main
 
 	<div class="row">
 		<div class="col-lg-12">
-				<p class="text-centered">AnyFetch brings rapid prototyping, testing, and great user experience to the IT space so that in a couple of days, any developer can test, try and ship his product.<br /><br /></p>
+				<p class="text-centered">AnyFetch brings rapid prototyping, testing, and great user experience to the IT space ; enabling you to solve your hardest problems in a fast, safe and economic way.<br /><br /></p>
 
 		</div>
 
