--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 <div class="content-section-b">
 
 	<div class="container">
-		<h1 class="white">See how they use AnyFetch</h1>
+		<h1 class="white">See how you can use AnyFetch</h1>
 		<br />
 		<br />
 		<ul class="list-inline intro-social-buttons" style="text-align:center">
