Index : Solution -> API

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 				<div class="intro-message">
 					<h1>Search, properly done.</h1>
 					<img class="source-icon" src="images/banner_icons.png">
-					<h3>A complete solution built for developers</h3>
+					<h3>A complete API built for developers</h3>
 					<hr class="intro-divider">
 					<ul class="list-inline intro-social-buttons">
 						<li><a href="get-started.html" class="btn btn-default btn-lg"><span class="network-name">Get started</span></a>
