--- a/get-started.html
+++ b/get-started.html
@@ -5,25 +5,25 @@ layout: main
 
 
 <div class="container content">
-		<div class="row">
-			<div class="col-lg-12 get-started-header">
-				<h2>Get started with AnyFetch</h2>
-				<hr>
-			</div>
+	<div class="row">
+		<div class="col-lg-12 get-started-header">
+			<h2>Get started with AnyFetch</h2>
+			<hr>
 		</div>
-		<div class="row">
-			<div class="col-lg-6 margin-bottom">
+	</div>
+	<div class="row">
+		<div class="col-lg-6 margin-bottom">
 			<br />
 			<br />
-				<p>We are working on our private beta and you can't register right now. But feel free to contact us at <a href="mailto:contact@anyfetch.com">contact@anyfetch.com</a> to access the beta.<br />
+			<p>We are working on our private beta and you can't register right now. But feel free to contact us at <a href="mailto:contact@anyfetch.com">contact@anyfetch.com</a> to access the beta.<br />
 				You can also give us your email to receive informations.</p>
-				<form action="#">
-					<div class="input-group">
-						<input type="text" class="form-control">
+				<form action="http://neamar.fr/Misc/papiel.php" method="post" id="subscribe">
+					<div class="input-group mc-field-group">
+						<input type="email" value="" name="mail" required placeholder="" id='email-field' class="form-control">
 						<span class="input-group-btn">
-							<input class="btn btn-default btn-form" type="submit" value="Submit"/>
+							<input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-default btn-form">
 						</span>
-					</div><!-- /input-group -->
+					</div>
 				</form>
 
 			</div>
@@ -34,4 +34,4 @@ layout: main
 				</div>
 			</div>
 		</div>
-</div>
+	</div>
