--- a/index.html
+++ b/index.html
@@ -64,7 +64,16 @@ layout: main
 
 	<div class="container">
 		<div class="row">
-			<div class="col-md-8">
+			<div class="col-md-4 col-md-push-8 text-left">
+				<br/>
+				<h1 class="text-left">Context is everywhere.</h1>
+				<hr/>
+				<h3 style="color: #666">Start developing your app
+				on top of AnyFetch.</h3>
+				<br/>
+				<p class="text-center"><a href="http://developers.anyfetch.com/" class="btn btn-default btn-lg"><span class="network-name">Get started</span></a></p>
+			</div>
+			<div class="col-md-8 col-md-pull-4">
 				<div class="window">
 					<img class="top" id="top" src="../images/multi-browser-top.jpg" />
 					<div class="frames" id="frames">
@@ -80,15 +89,6 @@ layout: main
 					</div>
 					<img width="100%" src="../images/multi-browser-frame.jpg" />
 				</div>
-			</div>
-			<div class="col-md-4 text-left">
-				<br/>
-				<h1 class="text-left">Context is everywhere.</h1>
-				<hr/>
-				<h3 style="color: #666">Start developing your app
-				on top of AnyFetch.</h3>
-				<br/>
-				<p class="text-center"><a href="http://developers.anyfetch.com/" class="btn btn-default btn-lg"><span class="network-name">Get started</span></a></p>
 			</div>
 		</div>
 	</div>
