--- a/about-us.html
+++ b/about-us.html
@@ -40,7 +40,7 @@ layout: main
 							<div class="caption">
 								<h4>Hugo Duroux</h4>
 								<p>Backend</p>
-								<p><a target="_blank" href="mailto:hugodouroux@gmail.com">hugoduroux@gmail.com</a></p>
+								<p><a target="_blank" href="mailto:hugodouroux@anyfetch.com">hugoduroux@anyfetch.com</a></p>
 									<a target="_blank" href="https://github.com/Amoki" class="profile-link"><i class="fa fa-github fa-2x"></i></a>
 									<a target="_blank" href="https://www.linkedin.com/profile/view?id=234443594" class="profile-link"><i class="fa fa-linkedin-square fa-2x"></i></a>
 							</div>
@@ -52,7 +52,7 @@ layout: main
 							<div class="caption">
 								<h4>Tanguy Hélesbeux</h4>
 								<p>Product</p>
-								<p><a target="_blank" href="mailto:tanguy.helesbeux@gmail.com">tanguy.helesbeux@gmail.com</a></p>
+								<p><a target="_blank" href="mailto:tanguy.helesbeux@anyfetch.com">tanguy.helesbeux@anyfetch.com</a></p>
 									<a target="_blank" href="https://github.com/Tgy31" class="profile-link"><i class="fa fa-github fa-2x"></i></a>
 									<a target="_blank" href="https://www.linkedin.com/profile/view?id=272642841" class="profile-link"><i class="fa fa-linkedin-square fa-2x"></i></a>
 							</div>
