use ajax to send email

--- a/get-started.html
+++ b/get-started.html
@@ -23,8 +23,18 @@ layout: main
 						<span class="input-group-btn">
 							<input type="submit" value="Submit" name="subscribe" id="mc-embedded-subscribe" class="btn btn-default btn-form">
 						</span>
+
 					</div>
 				</form>
+				<br />
+				<div class="alert alert-success alert-dismissable" id="success">
+					<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+					Your email has been registered.
+				</div>
+				<div class="alert alert-success alert-dismissable" id="fail">
+					<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+					Failed to register your email.
+				</div>
 
 			</div>
 			<div class="col-lg-5 col-lg-offset-1 margin-bottom">
