--- a/get-started.html
+++ b/get-started.html
@@ -31,7 +31,7 @@ layout: main
 					<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
 					Your email has been registered.
 				</div>
-				<div class="alert alert-success alert-dismissable" id="fail">
+				<div class="alert alert-danger alert-dismissable" id="fail">
 					<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
 					Failed to register your email.
 				</div>
