Revert "magouille carousel"
This reverts commit 1ddc446d007ea22daea942f60acfa74e6cfd1ba7.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ layout: main
 			</div>
 			<div class="col-md-8 col-md-pull-4">
 				<div class="window">
-					<img class="top" id="top" src="../images/multi-browser-top.jpg" style="height: 0px;" />
+					<img class="top" id="top" src="../images/multi-browser-top.jpg" />
 					<div class="frames" id="frames">
 						<div class="frame">
 							<img width="100%" src="../images/multi-browser-frame1.jpg" />
@@ -87,7 +87,7 @@ layout: main
 							<img width="100%" src="../images/multi-browser-frame3.jpg" />
 						</div>
 					</div>
-					<img width="100%" src="../images/multi-browser-frame1.jpg" />
+					<img width="100%" src="../images/multi-browser-frame.jpg" />
 				</div>
 			</div>
 		</div>
