--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ layout: main
 
 	<div class="container">
 		<div class="row">
-			<div class="col-md-4 col-md-push-8 text-left">
+			<div class="col-lg-4 col-lg-push-8 col-lg-offset-0 col-xs-10 col-xs-offset-1  text-left">
 				<br/>
 				<h1 class="text-left">Context is everywhere.</h1>
 				<hr/>
@@ -73,7 +73,7 @@ layout: main
 				<br/>
 				<p class="text-center"><a href="http://developers.anyfetch.com/" class="btn btn-default btn-lg"><span class="network-name">Get started</span></a></p>
 			</div>
-			<div class="col-md-8 col-md-pull-4">
+			<div class="col-lg-8 col-lg-pull-4 col-lg-offset-0 col-xs-10 col-xs-offset-1">
 				<div class="window">
 					<div class="frames" id="frames">
 						<div class="frame">
