Enterprise : get started

--- a/enterprise.html
+++ b/enterprise.html
@@ -21,7 +21,7 @@ layout: main
 						<li>Customize the context to your need</li>
 					</ol>
 				<br />
-				<p class="text-centered"><a class="btn btn-default" href="how-it-works.html" role="button">See how it works</a></p>
+				<p class="text-centered"><a class="btn btn-default" href="how-it-works.html" role="button">How it works</a></p>
 			</div><!-- /.col-lg-5 -->
 		</div>
 
@@ -36,7 +36,7 @@ layout: main
 				<br />
 				<br />
 				<br />
-				<p class="text-centered"><a class="btn btn-default" href="http://app.anyfetch.com" role="button">Get started</a></p>
+				<p class="text-centered"><a class="btn btn-default" href="get-started.html" role="button">Get started</a></p>
 			</div><!-- /.col-lg-5 -->
 		</div>
 
