--- a/enterprise.html
+++ b/enterprise.html
@@ -3,12 +3,25 @@ title: AnyFetch | Enterprise
 layout: main
 ---
 
-<div class="container content">
+<div class="intro-header min">
 
-	<div class="jumbotron">
-		<h1 class="title">AnyFetch for IT services</h1>
-		<p>Build, fast.</p>
+	<div class="container">
+
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="intro-message">
+					<h2>AnyFetch for IT services</h2>
+					<h3>Build, fast.</h3>
+				</div>
+			</div>
+		</div>
+
 	</div>
+	<!-- /.container -->
+
+</div>
+
+<div class="container content">
 
 	<div class="row row-text">
 		<div class="col-lg-6">
