--- a/how-it-works.html
+++ b/how-it-works.html
@@ -3,16 +3,28 @@ title: AnyFetch | How it works
 layout: main
 ---
 
+<div class="intro-header min">
+
+	<div class="container">
+
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="intro-message">
+					<h2>Enable awesome user experience</h2>
+					<h3>With painless integration</h3>
+				</div>
+			</div>
+		</div>
+
+	</div>
+	<!-- /.container -->
+
+</div>
+
 <div class="container content">
 
-
-	<div class="jumbotron">
-		<h1 class="title">Enable awesome user experience</h1>
-		<p>With painless integration</p>
-	</div>
-
 	<div class="row">
-					<img class="header-img" src="images/howitworks.jpg" />
+		<img class="header-img" src="images/howitworks.jpg" />
 	</div>
 
 	<div class="row">
