--- a/developers.html
+++ b/developers.html
@@ -3,13 +3,25 @@ title: AnyFetch | Developers
 layout: main
 ---
 
-<div class="container content">
+<div class="intro-header min">
 
-	<div class="jumbotron">
-		<h1 class="title">Developers</h1>
-		<p>Building your own document search-engine is but a few API calls away</p>
+	<div class="container">
+
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="intro-message">
+					<h2>Developers</h2>
+					<h3>Building your own document search-engine is but a few API calls away</h3>
+				</div>
+			</div>
+		</div>
+
 	</div>
+	<!-- /.container -->
 
+</div>
+
+<div class="container content">
 	<div class="row">
 		<div class="col-lg-12 text-centered">
 			<p>View our online documentation</p>
