--- a/use-cases.html
+++ b/use-cases.html
@@ -3,13 +3,25 @@ title: AnyFetch | Use cases
 layout: main
 ---
 
+<div class="intro-header min">
+
+	<div class="container">
+
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="intro-message">
+					<h2>Turn your data into information</h2>
+					<h3>Context is everywhere</h3>
+				</div>
+			</div>
+		</div>
+
+	</div>
+	<!-- /.container -->
+
+</div>
 
 <div class="container content">
-
-	<div class="jumbotron">
-		<h1 class="title">Turn your data<br> into information</h1>
-		<p>Context is everywhere</p>
-	</div>
 
 				<div class="content-section-c">
 
