--- a/about-us.html
+++ b/about-us.html
@@ -7,58 +7,56 @@ layout: main
 <div class="container content">
 
 		<div class="row">
-			<div class="col-lg-12">
-				<h2>Our team</h2>
-				<hr>
-					<div class="col-lg-3">
-						<div class="thumbnail-portrait">
-						<img class="portrait" src="images/mehdi-haut.jpg">
-							<div class="caption">
-								<h4>Mehdi Bouheddi</h4>
-								<p>CEO</p>
-								<p><a target="_blank" href="mailto:mehdi@anyfetch.com">mehdi@anyfetch.com</a></p>
-									<a target="_blank" href="https://github.com/Boudedi" class="profile-link"><i class="fa fa-github fa-2x"></i></a>
-									<a target="_blank" href="https://www.linkedin.com/profile/view?id=69893214" class="profile-link"><i class="fa fa-linkedin-square fa-2x"></i></a>
-							</div>
+			<h2>Our team</h2>
+			<hr>
+				<div class="col-md-3 col-sm-6">
+					<div class="thumbnail-portrait">
+					<img class="portrait" src="images/mehdi-haut.jpg">
+						<div class="caption">
+							<h4>Mehdi Bouheddi</h4>
+							<p>CEO</p>
+							<p><a target="_blank" href="mailto:mehdi@anyfetch.com">mehdi@anyfetch.com</a></p>
+								<a target="_blank" href="https://github.com/Boudedi" class="profile-link"><i class="fa fa-github fa-2x"></i></a>
+								<a target="_blank" href="https://www.linkedin.com/profile/view?id=69893214" class="profile-link"><i class="fa fa-linkedin-square fa-2x"></i></a>
 						</div>
 					</div>
-					<div class="col-lg-3">
-						<div class="thumbnail-portrait">
-						<img class="portrait" src="images/matthieu-haut.jpg">
-							<div class="caption">
-								<h4>Matthieu Bacconnier</h4>
-								<p>CTO</p>
-								<p><a target="_blank" href="mailto:matthieu@anyfetch.com">matthieu@anyfetch.com</a></p>
-									<a target="_blank" href="https://github.com/Neamar" class="profile-link"><i class="fa fa-github fa-2x"></i></a>
-									<a target="_blank" href="https://www.linkedin.com/profile/view?id=246055775" class="profile-link"><i class="fa fa-linkedin-square fa-2x"></i></a>
-							</div>
+				</div>
+				<div class="col-md-3 col-sm-6">
+					<div class="thumbnail-portrait">
+					<img class="portrait" src="images/matthieu-haut.jpg">
+						<div class="caption">
+							<h4>Matthieu Bacconnier</h4>
+							<p>CTO</p>
+							<p><a target="_blank" href="mailto:matthieu@anyfetch.com">matthieu@anyfetch.com</a></p>
+								<a target="_blank" href="https://github.com/Neamar" class="profile-link"><i class="fa fa-github fa-2x"></i></a>
+								<a target="_blank" href="https://www.linkedin.com/profile/view?id=246055775" class="profile-link"><i class="fa fa-linkedin-square fa-2x"></i></a>
 						</div>
 					</div>
-					<div class="col-lg-3">
-						<div class="thumbnail-portrait">
-						<img class="portrait" src="images/hugo-haut.jpg">
-							<div class="caption">
-								<h4>Hugo Duroux</h4>
-								<p>Backend</p>
-								<p><a target="_blank" href="mailto:hugodouroux@anyfetch.com">hugoduroux@anyfetch.com</a></p>
-									<a target="_blank" href="https://github.com/Amoki" class="profile-link"><i class="fa fa-github fa-2x"></i></a>
-									<a target="_blank" href="https://www.linkedin.com/profile/view?id=234443594" class="profile-link"><i class="fa fa-linkedin-square fa-2x"></i></a>
-							</div>
+				</div>
+				<div class="col-md-3 col-sm-6">
+					<div class="thumbnail-portrait">
+					<img class="portrait" src="images/hugo-haut.jpg">
+						<div class="caption">
+							<h4>Hugo Duroux</h4>
+							<p>Backend</p>
+							<p><a target="_blank" href="mailto:hugodouroux@anyfetch.com">hugoduroux@anyfetch.com</a></p>
+								<a target="_blank" href="https://github.com/Amoki" class="profile-link"><i class="fa fa-github fa-2x"></i></a>
+								<a target="_blank" href="https://www.linkedin.com/profile/view?id=234443594" class="profile-link"><i class="fa fa-linkedin-square fa-2x"></i></a>
 						</div>
 					</div>
-					<div class="col-lg-3">
-						<div class="thumbnail-portrait">
-						<img class="portrait" src="images/tanguy-haut.jpg">
-							<div class="caption">
-								<h4>Tanguy Hélesbeux</h4>
-								<p>Product</p>
-								<p><a target="_blank" href="mailto:tanguy.helesbeux@anyfetch.com">tanguy.helesbeux@anyfetch.com</a></p>
-									<a target="_blank" href="https://github.com/Tgy31" class="profile-link"><i class="fa fa-github fa-2x"></i></a>
-									<a target="_blank" href="https://www.linkedin.com/profile/view?id=272642841" class="profile-link"><i class="fa fa-linkedin-square fa-2x"></i></a>
-							</div>
+				</div>
+				<div class="col-md-3 col-sm-6">
+					<div class="thumbnail-portrait">
+					<img class="portrait" src="images/tanguy-haut.jpg">
+						<div class="caption">
+							<h4>Tanguy Hélesbeux</h4>
+							<p>Product</p>
+							<p><a target="_blank" href="mailto:tanguy.helesbeux@anyfetch.com">tanguy.helesbeux@anyfetch.com</a></p>
+								<a target="_blank" href="https://github.com/Tgy31" class="profile-link"><i class="fa fa-github fa-2x"></i></a>
+								<a target="_blank" href="https://www.linkedin.com/profile/view?id=272642841" class="profile-link"><i class="fa fa-linkedin-square fa-2x"></i></a>
 						</div>
 					</div>
-			</div>
+				</div>
 		</div>
 
 		<div class="row">
@@ -79,8 +77,8 @@ layout: main
 
 		<div class="row">
 			<div class="col-lg-12">
-				<img class="team" src="images/team.jpg" />
 			</div>
 		</div>
 
 </div>
+				<img class="team" src="images/team.jpg" />
