add logo to landing

--- a/index.html
+++ b/index.html
@@ -97,16 +97,21 @@ layout: main
 </div>
 
 <div class="content-section-b">
-
 	<div class="container">
 		<h1 class="white">See how you can use AnyFetch</h1>
-		<br />
 		<br />
 		<ul class="list-inline intro-social-buttons" style="text-align:center">
 			<li><a href="use-cases.html" class="btn btn-default btn-lg"><span class="network-name">Use cases</span></a>
 			</li>
 		</ul>
-		</div>
-
-
 	</div>
+</div>
+
+<div class="row">
+	<div class="col-md-2 col-md-offset-4 col-xs-6 col-xs-3 partner-container">
+		<img class="partner-img" src="/images/salesforce.jpg">
+	</div>
+	<div class="col-md-2 col-md-offset-0 col-xs-6 col-xs-3 partner-container">
+		<img class="partner-img" src="/images/axa.jpg">
+	</div>
+</div>
