--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ layout: main
 				<h3 style="color: #666">Start developing your app
 				on top of AnyFetch.</h3>
 				<br/>
-				<p class="text-center"><a href="http://developers.anyfetch.com/" class="btn btn-default btn-lg"><span class="network-name">Get started</span></a></p>
+				<p class="text-center"><a href="/get-started.html" class="btn btn-default btn-lg"><span class="network-name">Get started</span></a></p>
 			</div>
 			<div class="col-lg-8 col-lg-pull-4 col-lg-offset-0 col-xs-10 col-xs-offset-1">
 				<div class="window">
