remove logo from home

--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@ layout: main
 	</div>
 </div>
 
-<div class="row">
+<!-- <div class="row">
 	<div class="col-md-2 col-md-offset-4 col-xs-6 col-xs-3 partner-container">
 		<img class="partner-img" src="/images/salesforce.jpg">
 	</div>
 	<div class="col-md-2 col-md-offset-0 col-xs-6 col-xs-3 partner-container">
 		<img class="partner-img" src="/images/axa.jpg">
 	</div>
-</div>
+</div> -->
