Datas is uncountable

--- a/how-it-works.html
+++ b/how-it-works.html
@@ -42,7 +42,7 @@ layout: main
 
 					<div class="col-lg-3 content-column column-right">
 						<h2>Extraction</h2>
-						<p>Datas are <strong>enhanced</strong> with meta-data on the fly: an image with OCR, a document with full-text.<br /><br /></p>
+						<p>Data are <strong>enhanced</strong> with meta-data on the fly: an image with OCR, a document with full-text.<br /><br /></p>
 						<p class="text-centered"><a class="btn btn-default" target="_blank" href="http://developers.anyfetch.com/guides/using/hydrater.html" role="button">Extract meta-data</a></p>
 					</div><!-- /.col-lg-5 -->
 
