--- a/index-smart.html
+++ b/index-smart.html
@@ -13,7 +13,7 @@ layout: main
 				<div class="intro-message">
 					<h1>Search, properly done</h1>
 					<img class="source-icon" src="images/banner_icons.png">
-					<h3>A complete solution built for developers</h3>
+					<h3>A complete API built for developers</h3>
 					<hr class="intro-divider">
 					<ul class="list-inline intro-social-buttons">
 						<li><a href="get-started.html" class="btn btn-default btn-lg"><span class="network-name">Get started</span></a>
@@ -64,9 +64,17 @@ layout: main
 
 	<div class="container">
 		<div class="row">
-			<div class="col-md-8">
+			<div class="col-lg-4 col-lg-push-8 col-lg-offset-0 col-xs-10 col-xs-offset-1  text-left">
+				<br/>
+				<h1 class="text-left">Context is everywhere.</h1>
+				<hr/>
+				<h3 style="color: #666">Start developing your app
+				on top of AnyFetch.</h3>
+				<br/>
+				<p class="text-center"><a href="/get-started.html" class="btn btn-default btn-lg"><span class="network-name">Get started</span></a></p>
+			</div>
+			<div class="col-lg-8 col-lg-pull-4 col-lg-offset-0 col-xs-10 col-xs-offset-1">
 				<div class="window">
-					<img class="top" id="top" src="../images/multi-browser-top.jpg" />
 					<div class="frames" id="frames">
 						<div class="frame">
 							<img width="100%" src="../images/multi-browser-frame1.jpg" />
@@ -78,17 +86,22 @@ layout: main
 							<img width="100%" src="../images/multi-browser-frame3.jpg" />
 						</div>
 					</div>
-					<img width="100%" src="../images/multi-browser-frame.jpg" />
+					<img width="100%" src="../images/multi-browser-frame1.jpg" />
 				</div>
-			</div>
-			<div class="col-md-4 text-left">
-				<br/>
-				<h1 class="text-left">Context is everywhere.</h1>
-				<hr/>
-				<h3 style="color: #666">Start developing your app
-				on top of AnyFetch.</h3>
-				<br/>
-				<p class="text-center"><a href="http://developers.anyfetch.com/" class="btn btn-default btn-lg"><span class="network-name">Get started</span></a></p>
+				<div class="smartphone">
+					<div class="frames" id="frames">
+						<div class="frame">
+							<img width="100%" src="../images/smartphone-1.png" />
+						</div>
+						<div class="frame">
+							<img width="100%" src="../images/smartphone-2.png" />
+						</div>
+						<div class="frame">
+							<img width="100%" src="../images/smartphone-3.png" />
+						</div>
+					</div>
+					<img height="100%" src="../images/smartphone-1.png" />
+				</div>
 			</div>
 		</div>
 	</div>
@@ -98,16 +111,21 @@ layout: main
 </div>
 
 <div class="content-section-b">
-
 	<div class="container">
-		<h1 class="white">See how they use AnyFetch</h1>
-		<br />
+		<h1 class="white">See how you can use AnyFetch</h1>
 		<br />
 		<ul class="list-inline intro-social-buttons" style="text-align:center">
 			<li><a href="use-cases.html" class="btn btn-default btn-lg"><span class="network-name">Use cases</span></a>
 			</li>
 		</ul>
-		</div>
-
-
 	</div>
+</div>
+
+<!-- <div class="row">
+	<div class="col-md-2 col-md-offset-4 col-xs-6 col-xs-3 partner-container">
+		<img class="partner-img" src="/images/salesforce.jpg">
+	</div>
+	<div class="col-md-2 col-md-offset-0 col-xs-6 col-xs-3 partner-container">
+		<img class="partner-img" src="/images/axa.jpg">
+	</div>
+</div> -->
