Improve images & css positionment

--- a/index-smart.html
+++ b/index-smart.html
@@ -77,13 +77,13 @@ layout: main
 				<div class="window">
 					<div class="frames" id="frames">
 						<div class="frame">
-							<img width="100%" src="../images/multi-browser-frame1.jpg" />
+							<img src="../images/multi-browser-frame1.jpg" />
 						</div>
 						<div class="frame">
-							<img width="100%" src="../images/multi-browser-frame2.jpg" />
+							<img src="../images/multi-browser-frame2.jpg" />
 						</div>
 						<div class="frame">
-							<img width="100%" src="../images/multi-browser-frame3.jpg" />
+							<img src="../images/multi-browser-frame3.jpg" />
 						</div>
 					</div>
 					<img width="100%" src="../images/multi-browser-frame1.jpg" />
@@ -91,13 +91,13 @@ layout: main
 				<div class="smartphone">
 					<div class="frames" id="frames">
 						<div class="frame">
-							<img width="100%" src="../images/smartphone-1.png" />
+							<img src="../images/smartphone-1.png" />
 						</div>
 						<div class="frame">
-							<img width="100%" src="../images/smartphone-2.png" />
+							<img src="../images/smartphone-2.png" />
 						</div>
 						<div class="frame">
-							<img width="100%" src="../images/smartphone-3.png" />
+							<img src="../images/smartphone-3.png" />
 						</div>
 					</div>
 					<img height="100%" src="../images/smartphone-1.png" />
